<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:id="@+id/home_item_drawer_account"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_account"
        tools:targetApi="o" />
    <item android:id="@+id/home_item_drawer_maintenance"
        android:icon="@drawable/ic_build"
        android:title="@string/menu_maintenance"
        tools:targetApi="o" />
    <item android:id="@+id/home_item_drawer_limit"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_limit"
        tools:targetApi="o" />
    <item android:id="@+id/home_item_drawer_news"
        android:icon="@drawable/ic_mail"
        android:title="@string/menu_news"
        tools:targetApi="o" />
    <item android:id="@+id/home_item_drawer_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_setting"
        tools:targetApi="o" />
    <item android:id="@+id/home_item_drawer_support"
        android:icon="@drawable/ic_support"
        android:title="@string/menu_support"
        tools:targetApi="o" />
    <item android:id="@+id/home_item_drawer_logout"
        android:icon="@drawable/ic_keyboard_return"
        android:title="@string/menu_logout"
        tools:targetApi="o" />
</menu>