<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorThirdFragment"
    android:paddingHorizontal="@dimen/padding_high"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/padding_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <TextView
            style="@style/DefaultTextView.Label"
            android:text="@string/third_maintenance_title"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/third_maintenance_desc_1"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="15sp"/>

        <TextView
            style="@style/DefaultTextView"
            android:text="@string/third_maintenance_select_the_last_time_maintenance"
            android:layout_marginTop="@dimen/margin_large"
            android:textSize="15sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/third_maintenance_select_maintenance_card"
            style="@style/DefaultCardView"
            app:cardCornerRadius="@dimen/radius_small">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/DefaultTextView"
                    android:id="@+id/third_maintenance_select_maintenance_tv"
                    android:text="@string/third_maintenance_today"
                    android:layout_alignParentStart="true"/>

                <TextView
                    style="@style/DefaultTextView"
                    android:text="@string/common_change"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/third_maintenance_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorTransparent"
        android:text="@string/common_next"
        android:textColor="@color/black"
        app:iconPadding="0dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>