<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorLastFragment"
    android:paddingHorizontal="@dimen/padding_high"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/padding_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <TextView
            style="@style/DefaultTextView.Label"
            android:text="@string/last_maintenance_title"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/last_maintenance_desc_1"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="15sp"/>

        <androidx.cardview.widget.CardView
            style="@style/DefaultCardView"
            android:layout_marginTop="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/radius_small">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/last_maintenance_remaining_km_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="@dimen/size_icon_default"
                        android:layout_height="@dimen/size_icon_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:src="@drawable/ic_time"/>
                    
                    <TextView
                        style="@style/DefaultTextView"
                        android:layout_weight="1"
                        android:text="@string/last_maintenance_remaining_km"/>

                    <TextView
                        style="@style/DefaultTextView"
                        android:id="@+id/last_maintenance_remaining_km_tv"
                        android:text="3000 km"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/last_maintenance_next_maintenance_date_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="@dimen/size_icon_default"
                        android:layout_height="@dimen/size_icon_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:src="@drawable/ic_calendar"/>

                    <TextView
                        style="@style/DefaultTextView"
                        android:layout_weight="1"
                        android:text="@string/last_maintenance_next_maintenance_date"/>

                    <TextView
                        style="@style/DefaultTextView"
                        android:id="@+id/last_maintenance_next_maintenance_date_tv"
                        android:text="2026-04-14"
                        android:textStyle="bold"/>

                </LinearLayout>
                <TextView
                    style="@style/DefaultTextView.Detail"
                    android:id="@+id/last_maintenance_remaining_date_tv"
                    android:text="@string/last_maintenance_remaining_date_maintenance"
                    android:layout_gravity="end"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        
        <TextView
            style="@style/DefaultTextView.Detail"
            android:text="@string/last_maintenance_desc_2"
            android:layout_marginTop="@dimen/margin_default"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/last_maintenance_change_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/common_change"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_file"
            android:drawableTint="@color/blue"
            app:backgroundTint="@color/colorTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/last_maintenance_note_card"
            style="@style/DefaultCardView"
            android:layout_marginTop="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/radius_small">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/DefaultTextView"
                    android:text="@string/last_maintenance_note"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/DefaultTextView"
                    android:id="@+id/last_maintenance_note_tv" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/DefaultButton"
        android:id="@+id/last_maintenance_complete_btn"
        android:layout_width="match_parent"
        android:text="@string/common_complete"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/greenDark"
        app:cornerRadius="@dimen/radius_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>