<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorFirstFragment"
    android:paddingHorizontal="@dimen/padding_high"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/padding_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_alignParentTop="true"
        android:layout_above="@id/first_maintenance_add_btn">
        <TextView
            style="@style/DefaultTextView.Label"
            android:text="@string/first_maintenance_title"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/first_maintenance_desc_1"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="15sp"/>
        <TextView
            style="@style/DefaultTextView"
            android:text="@string/first_maintenance_desc_2"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="15sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/first_maintenance_type_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/item_type_maintenance"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/DefaultButton"
        android:id="@+id/first_maintenance_add_btn"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_default"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:cornerRadius="@dimen/radius_small"
        app:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/first_maintenance_next_btn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/first_maintenance_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorTransparent"
        android:text="@string/common_next"
        android:textColor="@color/black"
        app:iconPadding="0dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>